k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integration-framework-service
  namespace: gke-data-track-foundation
spec:
  type: NodePort
  selector:
    app: integration-framework-be
  ports:
    - port: 80
      targetPort: 8080
